--- a/foundry.toml
+++ b/foundry.toml
@@ -2,6 +2,8 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+optimizer = true
+via-ir = true
 
 remappings = [
   "@chainlink/contracts/=lib/chainlink/contracts/"
